--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -60,7 +60,7 @@
         alt="{{ trophy.title }}">
       <p class="trophy-description p-1">{{trophy.description}}</p>
       <p class="d-none d-sm-block trophy-rarity p-1">
-        <i class="fa fa-solid fa-trophy"></i>{{trophy.rarity}}
+        <i class="fa fa-solid fa-trophy"></i>{{trophy.rarity}}%
       </p>
 
     </div>
