--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -100,6 +100,7 @@ img{
 
 .trophy-description {
     margin-left: 2px;
+    font-size: 12px;
 
 }
 
@@ -164,3 +165,10 @@ img{
         height: 40vh;
     }
 }
+
+@media screen and (min-width: 1080px) {
+    .trophy-description {
+        font-size: 16px;
+    }
+}
+
