Added random game to index page,adjusted background size index page

--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -8,37 +8,60 @@
         <!--Checking if the user is logged in-->
         {% if user.is_authenticated %}
         <div class="row">
-            <p class="logged-in-open">Welcome to Last Trophy to get started click the game option in the navigation bar to view all the games
-                we have to offer
-                if you would like to create a guide for a specific trophy just click the trophy title to load all the
-                exisiting guides or create your own!
+            <p class="logged-in-open text-break">Welcome to Last Trophy if you would like to view more games like the
+                game below
+                then its simple the categories button below to find all the exciting games we have to offer!
             </p>
-            {% else %}
-            <div class="row">
-                <p class="heading-paragraph">Are you an aspiring trophy hunter and are fed up of keeping track of your
-                    progress
-                    yourself then look no further and become a trophy hunter today and join our ever growing community.
-                    It's
-                    very
-                    simple just click the button below to become a trophy hunter and join us in unlocking that one last
-                    trophy!
+        </div>
+        <div class="card text-black bg-light border-dark mb-3 mx-auto" style="max-width: 18rem;">
+
+            <div class="card-header">
+                <h3>{{random_game.title}}</h3>
+                {% if "placeholder" in random_game.featured_image.url %}
+                <img class="img-thumbnail" src="{% static 'images/elden-ring-cover.jpg' %}" alt="placeholder image">
+                {% else %}
+                <img class="img-thumbnail" src=" {{ random_game.featured_image.url }}" alt="{{ game.title }}">
+                {% endif %}
+            </div>
+
+            <div class="card-body">
+                <p class="card-text">
+                    <i class="fa fa-solid fa-trophy"></i>{{random_game.trophy_count}}
+                    <i class="fa fa-solid fa-clock"></i>{{random_game.hours}}
+                    <i class="fa fa-solid fa-star"></i>{{random_game.rating}}
                 </p>
-
             </div>
-            <div class="col-12">
-                <a class="btn btn-success {% if request.path == signup_url %}active{% endif %}" aria-current="page"
-                    href="{% url 'account_signup' %}">Become a Trophy Hunter</a>
-
-            </div>
-
-            <div class="col-12">
-                <a class="btn btn-success {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                    href="{% url 'account_login' %}">Login</a>
-            </div>
-
-            {% endif %}
         </div>
 
+        <div class="category-button">
+            <a href="{% url 'game' %}" class="btn btn-primary">Categories</a>
+        </div>
+        {% else %}
+        <div class="row">
+            <p class="heading-paragraph">Are you an aspiring trophy hunter and are fed up of keeping track of your
+                progress
+                yourself then look no further and become a trophy hunter today and join our ever growing community.
+                It's
+                very
+                simple just click the button below to become a trophy hunter and join us in unlocking that one last
+                trophy!
+            </p>
+
+        </div>
+        <div class="col-12">
+            <a class="btn btn-success {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+                href="{% url 'account_signup' %}">Become a Trophy Hunter</a>
+
+        </div>
+
+        <div class="col-12">
+            <a class="btn btn-success {% if request.path == login_url %}active{% endif %}" aria-current="page"
+                href="{% url 'account_login' %}">Login</a>
+        </div>
+
+        {% endif %}
     </div>
+
+</div>
 </div>
 {% endblock %}
