Adjusted random game card size for all screen sizes

--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -10,10 +10,10 @@
         <div class="row">
             <p class="logged-in-open text-break">Welcome to Last Trophy if you would like to view more games like the
                 game below
-                then its simple the categories button below to find all the exciting games we have to offer!
+                then its simple click the categories button below to find all the exciting games we have to offer!
             </p>
         </div>
-        <div class="card text-black bg-light border-dark mb-3 mx-auto" style="max-width: 18rem;">
+        <div class="card text-black bg-light border-dark mb-3 mx-auto" style="max-width: 30rem;">
 
             <div class="card-header">
                 <h3>{{random_game.title}}</h3>
