--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -28,6 +28,7 @@ a {
 }
 
 .heading-text {
+    height: 71vh;
     text-align: center;
 }
 
@@ -157,10 +158,19 @@ img{
     padding-right: 20px;
 }
 
+@media screen and (min-width: 800px) {
+    .heading-text {
+        height: 80.5vh;
+    }
+}
 
 /* Media Query larger desktop */
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1024px) {
+
+    .heading-text {
+        height: 85vh;
+    }
 
     .trophy-description {
         font-size: 16px;
@@ -168,4 +178,9 @@ img{
     
 }
 
-    
+
+@media screen and (min-width: 1200px) {
+    .heading-text {
+        height: 79vh;
+    }
+}
