--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -4,9 +4,16 @@
 {% block content %}
 <!--Guide Form Element-->
 <div class="container-fluid">
+    <div class="col-md-8 col-xl-12">
+        <p>Pick a game genre</p>
+        <p>Enter the Number of hours you are looking for this can be specified for what you are looking for</p>
+    </div>
     <div class="row col-2 col-md-8 col-xl-12">
+
         <form method="GET" action="{% url 'game' %}" class="d-flex flex-column flex-xl-row genre-form">
             {{form.as_p}}
+
+
             <input type="submit" value="Submit" class="btn btn-success form-btn">
         </form>
     </div>
@@ -44,7 +51,7 @@
 {% if user.is_superuser %}
 <div class="d-flex flex-column align-items-center pb-2">
     <a class="btn btn-primary" href="{% url 'add-game' %}">Create Game</a>
-  </div>
+</div>
 {% endif %}
 
 {% endblock %}
