--- a/category/templates/add_game.html
+++ b/category/templates/add_game.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row col-12">
         <div class="form-group">
-            <form id="gameForm" method="post" enctype="multipart/form-data">
+            <form id="gameForm" method="post" enctype="multipart/form-data" class="creation-form">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <button id="submitButton" type="submit" class="btn btn-success btn-lg">Submit</button>
