--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,11 @@ a {
     width: fit-content;
 }
 
+.base-image {
+    height: 200px;
+    width: 350px;
+}
+
 
 .genre-form {
     padding-top: 8px;
@@ -181,6 +186,13 @@ img{
 @media screen and (min-width: 800px) {
     .heading-text {
         height: 80.5vh;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .base-image {
+        height: 250px;
+        width: 450px;
     }
 }
 
