--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -10,9 +10,9 @@
             <div class="border col-12 col-md-8 col-lg-8 trophy-info">
                 <h3 class="pt-2 ps-1">Trophy title: {{trophies.title}}</h3>
                 {% if "placeholder" in trophies.featured_image.url %}
-                <img class="img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
+                <img class="trophy-image img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
                 {% else %}
-                <img class="img-thumbnail" src=" {{ trophies.featured_image.url }}" alt="{{ trophies.title }}">
+                <img class="trophy-image img-thumbnail" src=" {{ trophies.featured_image.url }}" alt="{{ trophies.title }}">
                 {% endif %}
                 <div class="col-md-12 col-lg-12 ps-2">
                     <p class="trophy-description-detail">Trophy Description: {{trophies.description}}</p>
