--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -15,10 +15,10 @@
                 <img class="trophy-image img-thumbnail" src=" {{ trophies.featured_image.url }}" alt="{{ trophies.title }}">
                 {% endif %}
                 <div class="col-md-12 col-lg-12 ps-2">
-                    <p class="trophy-description-detail">Trophy Description: {{trophies.description}}</p>
+                    <p class="trophy-description">Trophy Description: {{trophies.description}}</p>
                     <p class="d-none d-sm-block trophy-rarity">
                         <i class="fa fa-solid fa-trophy"></i>{{trophies.rarity}}
-                        <p class="text-center p-2 ">To view more information for any guide related to trophy:
+                        <p class="text-center trophy-description-detail">To view more information for any guide related to trophy:
                             {{trophies.title}} just click on the guide title to help out other trophy hunters like
                             yourself!</p>
                     </p>
