--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -17,11 +17,10 @@
                 <div class="col-md-12 col-lg-12 ps-2">
                     <p class="trophy-description">Trophy Description: {{trophies.description}}</p>
                     <p class="d-none d-sm-block trophy-rarity">
-                        <i class="fa fa-solid fa-trophy"></i>{{trophies.rarity}}
+                        <i class="fa fa-solid fa-trophy"></i>{{trophies.rarity}}</p>
                         <p class="text-center trophy-description-detail">To view more information for any guide related to trophy:
                             {{trophies.title}} just click on the guide title to help out other trophy hunters like
                             yourself!</p>
-                    </p>
                 </div>
             </div>
         </div>
@@ -118,5 +117,4 @@
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
