--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -42,7 +42,7 @@
 
 {% endif %}
 
-<div class="row">
+<div>
   <h3 class="d-flex flex-column align-items-md-center ms-1">Trophies</h3>
   <!--For each trophy of this game list all the trophies which was specified in the view-->
   
