--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -15,13 +15,42 @@
     </p>
     <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
-      {{ form.as_p }}
+      <div class="pb-2">
+        <label for="id_username">Username:</label>
+        <input type="text" name="username" placeholder="Username" autocomplete="username" minlength="1" maxlength="150"
+          required id="id_username">
+      </div>
+      <div class="pb-2">
+        <label for="id_email">Email (optional):</label>
+        <input type="email" name="email" placeholder="Email address" autocomplete="email" maxlength="320" id="id_email">
+      </div>
+
+      <div class="pb-2">
+        <label for="id_password1">Password:</label>
+        <input type="password" name="password1" placeholder="Password" autocomplete="new-password" required
+          id="id_password1">
+
+        <ul class="pt-2">
+          <li class="pb-2">Your password can’t be too similar to your other personal information.</li>
+          <li class="pb-2">Your password must contain at least 8 characters.</li>
+          <li class="pb-2">Your password can’t be a commonly used password.</li>
+          <li class="pb-2">Your password can’t be entirely numeric.</li>
+        </ul>
+
+
+      </div>
+
+
+      <div class="pb-3">
+        <label for="id_password2">Password (again):</label>
+        <input type="password" name="password2" placeholder="Password (again)" autocomplete="new-password" required
+          id="id_password2">
+      </div>
+      <button class="btn btn-primary" type="submit">Sign Up &raquo;</button>
       {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
-      <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
     </form>
-
   </div>
 </div>
 
