Added comments deletion testing results to testingmd

--- a/guides/templates/admin_guides.html
+++ b/guides/templates/admin_guides.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
         <ul> 
-            <!-- Iterate over guides not approved -->
+            <!-- Iterate over guides -->
             
             {% for guide in object_list %} 
             <!-- Display guides awaiting deletion -->
