--- a/guides/templates/admin_comments.html
+++ b/guides/templates/admin_comments.html
@@ -7,12 +7,12 @@
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
         <ul> 
-            <!-- Iterate over guides not approved -->
+            <!-- Iterate over comments -->
             
             {% for comment in object_list %} 
-            <!-- Display guides awaiting approval -->
+            <!-- Display comments list -->
             <li class="pt-2"><a href="{% url 'delete-comment-list' comment.pk %}">Comment: {{ comment.body }}</a></li> 
-            <!-- if all guides approved-->
+            <!-- if all comments deleted-->
             {% empty %} 
             <li>No comments avaliable.</li>
             {% endfor %}
