Added comments to python and html code

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -46,7 +46,7 @@
     </table>
 
 </div>
-
+<!--Admin user can create games-->
 {% if user.is_superuser %}
 <div class="d-flex flex-column align-items-center pb-2">
     <a class="btn btn-primary" href="{% url 'add-game' %}">Create Game</a>
