--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -16,6 +16,7 @@
         <div class="card text-black bg-light border-dark mb-3 mx-auto" style="max-width: 30rem;">
 
             <div class="card-header">
+                <!--Randomised game element-->
                 <h3>{{random_game.title}}</h3>
                 {% if "placeholder" in random_game.featured_image.url %}
                 <img class="base-image img-thumbnail" src="{% static 'images/elden-ring-cover.jpg' %}"
