--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 </div>
-
+<!--Admin user can edit, delete games and add trophies as well-->
 {% if user.is_superuser %}
 <div class="d-flex flex-column align-items-center pb-2">
   <a class="btn btn-primary" href="{% url 'edit-game' game.slug %}">Edit Game</a>
@@ -43,7 +43,6 @@
 <div>
   <h3 class="d-flex flex-column align-items-md-center ms-1">Trophies</h3>
   <!--For each trophy of this game list all the trophies which was specified in the view-->
-  
   {% for trophy in page_obj %}
   <div class="d-flex flex-column align-items-md-center trophy-section pb-1">
     <div class="trophy-name">
@@ -64,6 +63,7 @@
 
     </div>
   </div>
+  <!--Admin user can edit and delete trophies-->
   {% if user.is_superuser %}
       <div class="d-flex flex-column align-items-center pt-2 pb-2">
         <a class="btn btn-primary" href="{% url 'edit-trophy' trophy.slug %}">Edit Trophy</a>
@@ -75,7 +75,7 @@
 
   
 </div>
-
+    <!--Next and previous buttons for pagination-->
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
