--- a/guides/templates/delete_comment.html
+++ b/guides/templates/delete_comment.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-<!--Delete Guide Element-->
+<!--Delete Comment Element-->
 <div class="container-fluid">
     <h3 class="text-center">Delete Comment</h3>
+    <!--Checking if the admin user is logged in to return to comments list-->
     {% if user.is_superuser %}
     <p class="text-center">Are you sure you want to delete this comment this action can't be undone
         or press back to
         return to the comments list.</p>
+        <!--All other logged in users-->
     {% else %}
     <p class="text-center">Are you sure you want to delete this comment this action can't be undone
         or press back to
@@ -17,8 +19,10 @@
             <form id="commentForm" method="post">
                 {% csrf_token %}
                 <div class="d-flex flex-column align-items-center">
+                    <!--Checking if the admin user is logged in to return to comments list-->
                     {% if user.is_superuser %}
                     <a href="{% url 'comments-list' %}" class="btn btn-primary btn-lg">Back</a>
+                    <!--All other logged in users-->
                     {% else %}
                     <a href="{% url 'game' %}" class="btn btn-primary btn-lg">Back</a>
                     {% endif %}
