--- a/guides/templates/delete_guide.html
+++ b/guides/templates/delete_guide.html
@@ -3,10 +3,12 @@
 <!--Delete Guide Element-->
 <div class="container-fluid">
     <h3 class="text-center">Delete Guide</h3>
+    <!--Checking if the admin user is logged in to return to guides list-->
     {% if user.is_superuser %}
     <p class="text-center">Are you sure you want to delete guide {{guide.title}} this action can't be undone
         or press back to
         return to the guides list.</p>
+        <!--All other logged in users-->
         {% else %}
         <p class="text-center">Are you sure you want to delete guide {{guide.title}} this action can't be undone
             or press back to
@@ -17,8 +19,10 @@
             <form id="guideForm" method="post">
                 {% csrf_token %}
                 <div class="d-flex flex-column align-items-center">
+                    <!--Checking if the admin user is logged in to return to guides list-->
                     {% if user.is_superuser %}
                     <a href="{% url 'guides-list' %}" class="btn btn-primary btn-lg">Back</a>
+                    <!--All other logged in users-->
                     {% else %}
                     <a href="{% url 'game' %}" class="btn btn-primary btn-lg">Back</a>
                     {% endif %}
