--- a/guides/templates/guides_not_approved.html
+++ b/guides/templates/guides_not_approved.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+<!--Guides not approved element -->
 <h3 class="text-center text-lg-start ps-3">Approve Guides</h3>
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
