--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -88,6 +88,7 @@
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
             <a class="btn btn-success" href="{% url 'not-approved-guide' %}">Approve Guides</a>
         </div>
+        <!--Admin user can delete guides-->
         {% if user.is_superuser %}
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
             <a class="btn btn-danger" href="{% url 'guides-list' %}">Delete Guides</a>
