Added css comments, css validation to testingmd

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,12 +10,10 @@ body {
     font-family: "Raleway", sans-serif;
 }
 
-
 main {
     flex-grow: 1;
     background-color: #F8F8FF
 }
-
 
 h1,
 h2,
@@ -28,6 +26,8 @@ a {
     text-decoration: none;
     color: black;
 }
+
+/* Heading styles */
 
 .heading-text {
     height: 71vh;
@@ -43,12 +43,14 @@ a {
     width: fit-content;
 }
 
+/* Random game image styling */
+
 .base-image {
     height: 200px;
     width: 350px;
 }
 
-
+/* Genre form styling */
 
 .genre-form {
     padding-top: 8px;
@@ -68,10 +70,14 @@ a {
     background-color: #DCDCDC;
 }
 
+/* Select input drop down styling */
+
 select {
     width: 200px;
     height: 20px;
 }
+
+/* input styling for form elements */
 
 input {
     width: 200px;
@@ -82,11 +88,14 @@ input[type="checkbox"] {
     width: 10px;
 }
 
+/* Image styling */
+
 img {
     float: left;
     margin-left: 2px;
 }
 
+/* Game detail styling */
 .game-image {
     height: 200px;
     width: 500px;
@@ -113,12 +122,12 @@ img {
     padding: 20px;
 }
 
+/* Trophy section styling */
 
 .trophy-heading {
     padding-left: 4px;
 
 }
-
 
 .trophy-name {
     margin-left: 5px;
@@ -126,7 +135,6 @@ img {
     padding-bottom: 10px;
     color: black;
 }
-
 
 .trophy-description {
     margin-left: 2px;
@@ -166,6 +174,8 @@ img {
     background-color: #DCDCDC;
 }
 
+/* Create and edit form styling */
+
 .creation-form input {
     height: 35px;
 }
@@ -173,6 +183,8 @@ img {
 .creation-form select {
     height: 35px;
 }
+
+/* Guide element styling */
 
 .guide-list {
     background-color: #ffffff;
@@ -182,6 +194,8 @@ img {
     background-color: #ffffff;
 }
 
+/* Comment element styling */
+
 .comment-section {
     background-color: #ffffff;
 }
@@ -190,6 +204,8 @@ img {
     background-color: #fffaf0;
 }
 
+/* Social media icons styling */
+
 .social-icons {
     list-style: none;
     display: flex;
@@ -197,12 +213,13 @@ img {
     padding-right: 35px;
 }
 
-
 .social-icons>li {
     font-size: 1.5em;
     padding-left: 0;
     padding-right: 20px;
 }
+
+/* Media Query for smaller devices */
 
 @media screen and (min-width:500px) {
     .game-image {
@@ -212,11 +229,7 @@ img {
 
 }
 
-@media screen and (min-width: 800px) {
-    .heading-text {
-        height: 80.5vh;
-    }
-}
+/* Media Query tablet devices */
 
 @media screen and (min-width: 768px) {
     .base-image {
@@ -230,7 +243,13 @@ img {
     }
 }
 
-/* Media Query larger desktop */
+@media screen and (min-width: 800px) {
+    .heading-text {
+        height: 80.5vh;
+    }
+}
+
+/* Media Query for laptop devices */
 
 @media screen and (min-width: 1024px) {
 
@@ -243,8 +262,7 @@ img {
         height: 250px;
 
     }
-
-
+    
     .trophy-description {
         font-size: 16px;
     }
@@ -255,6 +273,7 @@ img {
 
 }
 
+/* Media Query for larger desktop devices */
 
 @media screen and (min-width: 1200px) {
     .heading-text {
